add tender file to agenda

--- a/init.org
+++ b/init.org
@@ -20,8 +20,10 @@ Tangle and byte compile
                 (concat "init.org"))
      (org-babel-tangle)
      (byte-recompile-directory (expand-file-name user-emacs-directory) 0)))
-(add-hook 'after-save-hook #'my--tangle-byte-compile-org)
 #+END_SRC
+
+#+RESULTS:
+: my--tangle-byte-compile-org
 
 Tangle
 
@@ -34,6 +36,9 @@ Tangle
      (org-babel-tangle)))
 (add-hook 'after-save-hook #'my--tangle-org)
 #+END_SRC
+
+#+RESULTS:
+| rmail-after-save-hook | my--tangle-org | my--tangle-byte-compile-org |
 
 ** Bootstrap straight.el
 *** Install straight.el if not yet
@@ -56,7 +61,6 @@ Tangle
 (straight-use-package 'use-package)
 (setq straight-use-package-by-default t)
 (straight-use-package 'org-plus-contrib)
-(require 'org-tempo)
 #+END_SRC
 
 ** Better-default 
@@ -438,14 +442,15 @@ Tangle
 ** Org-super-agenda setting
 #+BEGIN_SRC emacs-lisp :tangle yes
   (setq org-agenda-files (list "~/Dropbox/orggtd/todo.org"
-                               "~/Dropbox/orggtd/mobile.org"))
+                               "~/Dropbox/orggtd/mobile.org"
+                               "~/OneDrive - ABB/tender.org"))
   (use-package org-super-agenda
     :defer t
     :config
     (org-super-agenda-mode))
   (setq org-agenda-custom-commands
         '(("z" "Super zaen view"
-           ((agenda "" ((org-agenda-span 3)
+           ((agenda "" ((org-agenda-span 10)
                         (org-super-agenda-groups
                          '((:name "Habit"
                                   :habit t)
@@ -657,7 +662,7 @@ Tangle
            (irony-mode-hook . irony-cdb-autosetup-compile-options)))
 #+end_src
 ** vterm
-#+begin_src emacs-lisp :tangle yes
+#+begin_src emacs-lisp :tangle no
   (use-package vterm)
   (use-package vterm-toggle
     :straight (vterm-toggle :type git :host github :repo "jixiuf/vterm-toggle")
